website/versioned_docs/version-4.1/get-started/glossary.md
---
id: version-4.1-glossary
title: Glossary
sidebar_label: Glossary
original_id: glossary
---

<div style="text-align: justify">

The Qrvey glossary serves as a tool to help take the mystery out of some of our most commonly used data, analytics and automation lingo. See something confusing that's not mentioned here? Please let us know.

## A

**Action** -  The workflow element that performs the work you designate.

**Analytics** - Qrvey's analytics platform is used for analyzing collected feedback or other data sources.

**API** - The application programming interface developers use to integrate Qrvey with their websites and applications.

**Application** - A collection of web forms, pages and workflows that all work together to help automate your workday.

## B

**Branching** - A series of questions that a respondent will answer as a result of answering a conditional question.

## C

**Chart Builder** - A tool that allows users to build custom charts to visualize their data.

**Conditional Question** - A question that, depending on how a respondent answers, will be used to trigger branching.

**Creator** - Someone who uses Qrvey to make or build forms, analytics, workflows or even entire applications that others will use and interact with.

## D

**Dashboard** - A single place to view data from multiple web forms all at once in real-time.

**Dataset** - A collection of data items conforming to a specified schema. Within Qrvey applications the data items are mapped to rows of data.

## E

**Expression Question** - A question type that allows a respondent to express how they feel by selecting from a pre-chosen list of words.

## F

**Filter** - A condition applied to a datasource view to temporarily exclude data which does not meet the specified conditions.

**Form** - A specific type of web form that is typically used to collect information and interact with applications.

## G

**Google Docs** - A cloud-based office software suite that includes Google Sheets, a spreadsheet that can be used as a data source in Qrvey.

## H

**Histogram** - The first chart in the Summary view in the Analyze section of a Web Form. This chart shows when your web form responses were received.

## I

**In-Context Form** - A web form that can be easily added to a webpage using a snippet of Javascript code.

## J

**JSON** - The open standard data object used by Qrvey's API to pass data.

## K

**KPI** - A Key Performance Indicator (KPI) is a measurable value that demonstrates how effectively a company is achieving key business objectives.

## L

**Lookup** - A field type that displays a predefined list of values from which a respondent must choose. Lookups get their data from manually typed lists, other web forms, web hooks or other data sources like Google Docs.

## M

**Metric** - A quantifiable measure that is used to track and assess the status of a specific business process.

## N

**Net Promoter Score (NPS)** - A one question survey that allows businesses to track their customer satisfaction over time. NPS uses a simple 1-10 scale and divides customers into three groups: promoters, passives and detractors. The actual NPS score is calculated by subtracting the percentage of detractors from the percentage of promoters, yielding a number between -100 and +100.

## O

**Outlier** - A data point that falls outside statistical norms. These values are considered anomalies.

## P

**Page** - Qrvey elements that can be used to house web forms and select workflow actions. Multiple pages can be combined with a common navigation bar and, optionally, authentication to build complete applications.

**Page Flow** - A page that is combined with workflow actions to complete a task. For example, a page flow may display a form, then process the submission of that form.

**Piping** - Piping allows the answer from one question to automatically be inserted into other questions. Qrvey uses the hashtag (##) and the name you provide as a placeholder for the answer in subsequent questions.

## Q

**Qrvey** - An all-in-one analytics platform for software and service providers that includes data collection, analysis, automation and integration tools to promote data-driven decision making.

## R

**Recipient** - Someone who received an automated email from a workflow action. If the recipient clicks on a link in an email they may be shown a web form to complete. If they complete the form they become a respondent. See our entry below for _respondent_.

**Respondent** - Someone who completes a web form. For example a respondent may be someone you ask to answer via email or text, or someone who responds to a Qrvey link on a website, blog or social media post.

## S

**Survey** - A type of web form that collects data from individuals using a collection of questions.

## T

**Time Series** - A dataset with a date/time field. This provides the ability to view, analyze and compare results over time, such as by days, weeks, months or years.

**Token** - A placeholder used inside formulas and workflows, eg it may correspond to a field or system variable.

**Trend Analysis** - A chart of a _Time Series_ used to visually explore time related patterns and correlations.

**Trigger** - A workflow element used to initiate a process.

## U

**User Permissions** - Users can be assigned different permissions within an application depending on their role.
 
## V

**Variable** - A system variable - eg the current user name, the system date/time, etc. See also - _Token_.

## W

**Web Form** - A data collection tool that can be used inside Qrvey as a part of pages and workflows, or shared externally via email, social media or embdded in a website.

**Widget** - A pre-built web control, eg chart, form, etc, that used to allow easi=y embedding of Qrvey functionality into a website or application. Typically just a code snippet is needed, with little to no associated coding or development.

**Workflow** - A series of triggers, conditions and actions that work together to perform a business function.

## Y

**Yes/No** - A simple binary question type that only has two responses, such as "yes" or "no", "true' or false" or similar alternatives.

## Z

**Zapier** - One of Qrvey's integration partners that connects our platform to hundreds of other web-based services. _Note, it rhymes with "happier"_.